--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laura Boulus - Cybersécurité</title>
+    <title>Laura Boulus - Qui suis-je ?</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
         * {
@@ -481,7 +481,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Laura Boulus</h1>
-                <p class="subtitle">Étudiante Ingénieure en Cybersécurité</p>
+                <p class="subtitle">« La confiance se gagne en gouttes et se perd en litres. » – Jean-Paul Sartre.</p>
                 <p>Passionnée par la sécurité des systèmes d'information, je construis une expertise technique au service d'une vision humaine de la cybersécurité. Actuellement en alternance chez CFAO, je développe mes compétences en gestion des vulnérabilités et pentest.</p>
                 <div class="cta-buttons">
                     <a href="contact.html" class="btn btn-primary">Me contacter</a>
