--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Laura Boulus</title>
+    <title>Contactez Laura Boulus</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
         * {
@@ -362,7 +362,7 @@
 
                 <div style="margin-top: 3rem; padding: 2rem; background: var(--cream); border-radius: 15px;">
                     <h3 style="font-size: 1.2rem; margin-bottom: 1rem; color: var(--navy);">Disponibilité</h3>
-                    <p>Actuellement en alternance chez CFAO, je suis ouverte aux opportunités de collaboration, aux projets freelance et aux échanges professionnels.</p>
+                    <p>Passionée par la cybersécurité et l'humain, je suis ouverte aux opportunités de collaboration et aux échanges professionnels.</p>
                 </div>
             </div>
 
@@ -401,7 +401,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Laura Boulus - Tous droits réservés</p>
+        <p>&copy; Laura Boulus </p>
         <div class="social-links">
             <a href="mailto:lauraboulus01@gmail.com">Email</a>
             <a href="https://www.linkedin.com/in/laura-boulus/" target="_blank">LinkedIn</a>
