--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
             <div class="hero-content">
                 <h1>Laura Boulus</h1>
                 <p class="subtitle">« La confiance se gagne en gouttes et se perd en litres. » – Jean-Paul Sartre.</p>
-                <p>Passionnée par la sécurité des systèmes d'information, je construis une expertise technique au service d'une vision humaine de la cybersécurité. Actuellement en alternance chez CFAO, je développe mes compétences en gestion des vulnérabilités et pentest.</p>
+                <p>Passionnée par la sécurité des systèmes d'information, je construis une expertise technique au service d'une vision humaine de la cybersécurité. Actuellement SI Project Manager Assistant CFAO, je développe mes compétences en gestion des vulnérabilités et pentest.</p>
                 <div class="cta-buttons">
                     <a href="contact.html" class="btn btn-primary">Me contacter</a>
                     <a href="#apropos" class="btn btn-secondary">En savoir plus</a>
@@ -501,13 +501,13 @@
             <div class="about-card">
                 <h3>Vision</h3>
                 <p>La cybersécurité est souvent présentée comme un univers dominé par la peur : peur des hackers, peur de l'erreur, peur de la faille. Mais derrière les chiffres, les vulnérabilités et les attaques, il y a une réalité humaine qu'il ne faut jamais perdre de vue.</p>
-                <p style="margin-top: 1rem;">Ma vision est que la cybersécurité doit aller au-delà du réflexe défensif. Elle doit devenir un outil de confiance, capable de rassurer et d'ouvrir des perspectives. Sécuriser un système, ce n'est pas seulement protéger des machines, c'est protéger des personnes et leurs usages.</p>
+                <p style="margin-top: 1rem;">La cybersécurité doit aller au-delà du réflexe défensif. Elle doit devenir un outil de confiance, capable de rassurer et d'ouvrir des perspectives. Sécuriser un système, ce n'est pas seulement protéger des machines, c'est protéger des personnes et leurs usages.</p>
             </div>
 
             <div class="about-card">
                 <h3>Parcours</h3>
-                <p>Le chemin vers la cybersécurité s'est construit étape par étape, avec une volonté constante d'explorer les sciences et la technologie. Le Bac scientifique a posé les bases de la rigueur et de la méthode. Le DUT en génie électrique et informatique industrielle a offert une première immersion dans le concret.</p>
-                <p style="margin-top: 1rem;">Poursuivre avec un Bachelor puis un cycle ingénieur en cybersécurité a été une évidence, car ce domaine rassemble toutes les facettes recherchées : la technique, la stratégie et l'impact humain.</p>
+                <p>Le chemin vers la cybersécurité s'est construit étape par étape, avec une volonté constante d'explorer les sciences et la technologie. Le Bac scientifique a posé les bases de la rigueur et de la méthode. Mon entrée à l'ESIEA a offert une première immersion dans le concret.</p>
+                <p style="margin-top: 1rem;">Poursuivre dans le cycle d'ingénieurie informatique a été une évidence, car ce domaine rassemble toutes les facettes recherchées : la technique, la stratégie et l'impact humain.</p>
             </div>
 
             <div class="about-card">
@@ -532,7 +532,7 @@
                 <div class="timeline-year">2020</div>
                 <div class="timeline-content">
                     <h4>Baccalauréat Scientifique</h4>
-                    <h5>Lycée Supérieur Privé de La Celle-Saint-Cloud - Paris</h5>
+                    <h5>Lycée Supérieur Privé du Laboratoire</h5>
                     <p>Formation scientifique posant les bases de la rigueur et de la méthode analytique.</p>
                 </div>
             </div>
@@ -549,7 +549,7 @@
             <div class="timeline-item">
                 <div class="timeline-year">2021 - 2022</div>
                 <div class="timeline-content">
-                    <h4>Projet FB Peinture</h4>
+                    <h4>Projet d'étude - FB Peinture</h4>
                     <h5>Création de site web, affiches, flyers et stratégie digitale</h5>
                     <p>Première expérience de coordination et de design graphique pour un projet entrepreneurial.</p>
                 </div>
@@ -558,8 +558,8 @@
             <div class="timeline-item">
                 <div class="timeline-year">2021 - 2022</div>
                 <div class="timeline-content">
-                    <h4>Projet NLA Centre</h4>
-                    <h5>Chef de projet (équipe de 2 personnes)</h5>
+                    <h4>Projet d'étude - NLA Sourire</h4>
+                    <h5>Chef de projet (équipe de 4 personnes)</h5>
                     <p>Lien intergénérationnel entre étudiants et personnes âgées. Développement de compétences en gestion de projet et coordination d'équipe.</p>
                 </div>
             </div>
@@ -567,14 +567,14 @@
             <div class="timeline-item">
                 <div class="timeline-year">2023</div>
                 <div class="timeline-content">
-                    <h4>Thom Group</h4>
+                    <h4>Stage de 6 mois - Thom Group</h4>
                     <h5>Déploiement de la roadmap cybersécurité</h5>
                     <p>Première expérience professionnelle dans le domaine de la cybersécurité au sein d'un groupe industriel.</p>
                 </div>
             </div>
 
             <div class="timeline-item">
-                <div class="timeline-year">2024 - 2026</div>
+                <div class="timeline-year">2024 - 2025</div>
                 <div class="timeline-content">
                     <h4>Alternance CFAO</h4>
                     <h5>SI Project Manager Assistant - CFAO</h5>
@@ -602,7 +602,7 @@
 
             <div class="project-card">
                 <div class="project-header">
-                    <h3>Projet VOIP/TOIP</h3>
+                    <h3>Projet d'étude - VOIP/TOIP</h3>
                     <span class="tag">ESIEA - Académique</span>
                 </div>
                 <div class="project-content">
