--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
     <!-- Navigation -->
     <nav>
         <div class="container">
-            <div class="logo">Laura Boulus</div>
+            <div class="logo">Bienvenue dans mon monde</div>
             <ul>
                 <li><a href="#accueil">Accueil</a></li>
                 <li><a href="#apropos">À propos</a></li>
